ASL/src/y.output
Terminals unused in grammar

   END_OF_FILE
   DOT
   DOTDOT
   BACKQUOTE
   SQUARE


State 8 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: /* empty */
    2        | program stmt EOL

    3 stmt: expr SEMICOLON

    4 defun: DEFUN QNAME LBRACE var_list RBRACE expressions_block

    5 while: WHILE LBRACE expr RBRACE expressions_block

    6 if: ifx
    7   | ife

    8 ifx: IF LBRACE expr RBRACE THEN expr

    9 ife: IF LBRACE expr RBRACE THEN expr ELSE expr

   10 expr: QNAME LBRACE expr_list RBRACE
   11     | get_attr
   12     | get_attr EQUAL expr
   13     | conz
   14     | seq
   15     | while
   16     | defun
   17     | if
   18     | expressions_block
   19     | INTEGER
   20     | DOUBLE
   21     | BOOLEAN
   22     | ASL_STRING
   23     | QNAME
   24     | UNDEF
   25     | var
   26     | var EQUAL expr
   27     | MINUS expr
   28     | NOT expr
   29     | expr PLUS expr
   30     | expr MINUS expr
   31     | expr DIVISION expr
   32     | expr MULT expr
   33     | expr EQ expr
   34     | expr NEQ expr
   35     | expr GT expr
   36     | expr GTE expr
   37     | expr LT expr
   38     | expr LTE expr
   39     | expr AND expr
   40     | expr OR expr
   41     | LBRACE expr RBRACE

   42 conz: LCURLY_PER assignment_list RCURLY_PER
   43     | ATTRIBUTON_VARIABLE EQUAL LCURLY_PER assignment_list RCURLY_PER

   44 seq: LBRACE_PER expressions_comma RBRACE_PER
   45    | ATTRIBUTON_VARIABLE EQUAL LBRACE_PER expressions_comma RBRACE_PER

   46 assignment_list: expr EQUAL expr
   47                | assignment_list COMMA expr EQUAL expr

   48 get_attr: expr LSQUAREBRACE expressions_square_braces RSQUAREBRACE

   49 expressions_square_braces: expr
   50                          | expressions_square_braces TWOSQUAREBRACES expr

   51 expressions_block: LCURLYBRACE RCURLYBRACE
   52                  | LCURLYBRACE expressions_semicolon RCURLYBRACE
   53                  | LCURLYBRACE expressions_semicolon SEMICOLON RCURLYBRACE

   54 expressions_semicolon: expr
   55                      | expressions_semicolon SEMICOLON expr

   56 expr_list: expressions_comma
   57          | /* empty */

   58 expressions_comma: expr
   59                  | expressions_comma COMMA expr

   60 var_list: variables
   61         | /* empty */

   62 variables: VARIABLE
   63          | variables COMMA VARIABLE

   64 var: VARIABLE
   65    | ATTRIBUTON_VARIABLE


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 19
DOUBLE (259) 20
ASL_STRING (260) 22
QNAME (261) 4 10 23
VARIABLE (262) 62 63 64
ATTRIBUTON_VARIABLE (263) 43 45 65
BOOLEAN (264) 21
UNDEF (265) 24
WHILE (266) 5
EOL (267) 2
END_OF_FILE (268)
NOT (269) 28
EQ (270) 33
NEQ (271) 34
GT (272) 35
GTE (273) 36
LT (274) 37
LTE (275) 38
AND (276) 39
OR (277) 40
MINUS (278) 27 30
PLUS (279) 29
DIVISION (280) 31
MULT (281) 32
EQUAL (282) 12 26 43 45 46 47
LBRACE (283) 4 5 8 9 10 41
RBRACE (284) 4 5 8 9 10 41
SEMICOLON (285) 3 53 55
DOT (286)
COMMA (287) 47 59 63
DOTDOT (288)
LBRACE_PER (289) 44 45
RBRACE_PER (290) 44 45
LCURLY_PER (291) 42 43
RCURLY_PER (292) 42 43
LSQUAREBRACE (293) 48
RSQUAREBRACE (294) 48
TWOSQUAREBRACES (295) 50
LCURLYBRACE (296) 51 52 53
RCURLYBRACE (297) 51 52 53
BACKQUOTE (298)
DEFUN (299) 4
IF (300) 8 9
THEN (301) 8 9
ELSE (302) 9
UNMINUS (303)
SQUARE (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1 2, on right: 0 2
stmt (52)
    on left: 3, on right: 2
defun (53)
    on left: 4, on right: 16
while (54)
    on left: 5, on right: 15
if (55)
    on left: 6 7, on right: 17
ifx (56)
    on left: 8, on right: 6
ife (57)
    on left: 9, on right: 7
expr (58)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41, on right: 3 5 8 9 12
    26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 46 47 48 49 50
    54 55 58 59
conz (59)
    on left: 42 43, on right: 13
seq (60)
    on left: 44 45, on right: 14
assignment_list (61)
    on left: 46 47, on right: 42 43 47
get_attr (62)
    on left: 48, on right: 11 12
expressions_square_braces (63)
    on left: 49 50, on right: 48 50
expressions_block (64)
    on left: 51 52 53, on right: 4 5 18
expressions_semicolon (65)
    on left: 54 55, on right: 52 53 55
expr_list (66)
    on left: 56 57, on right: 10
expressions_comma (67)
    on left: 58 59, on right: 44 45 56 59
var_list (68)
    on left: 60 61, on right: 4
variables (69)
    on left: 62 63, on right: 60 63
var (70)
    on left: 64 65, on right: 25 26


state 0

    0 $accept: . program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


state 1

    0 $accept: program . $end
    2 program: program . stmt EOL

    $end                 shift, and go to state 2
    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    stmt               go to state 20
    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 26
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 2

    0 $accept: program $end .

    $default  accept


state 3

   19 expr: INTEGER .

    $default  reduce using rule 19 (expr)


state 4

   20 expr: DOUBLE .

    $default  reduce using rule 20 (expr)


state 5

   22 expr: ASL_STRING .

    $default  reduce using rule 22 (expr)


state 6

   10 expr: QNAME . LBRACE expr_list RBRACE
   23     | QNAME .

    LBRACE  shift, and go to state 32

    $default  reduce using rule 23 (expr)


state 7

   64 var: VARIABLE .

    $default  reduce using rule 64 (var)


state 8

   43 conz: ATTRIBUTON_VARIABLE . EQUAL LCURLY_PER assignment_list RCURLY_PER
   45 seq: ATTRIBUTON_VARIABLE . EQUAL LBRACE_PER expressions_comma RBRACE_PER
   65 var: ATTRIBUTON_VARIABLE .

    EQUAL  shift, and go to state 33

    EQUAL     [reduce using rule 65 (var)]
    $default  reduce using rule 65 (var)


state 9

   21 expr: BOOLEAN .

    $default  reduce using rule 21 (expr)


state 10

   24 expr: UNDEF .

    $default  reduce using rule 24 (expr)


state 11

    5 while: WHILE . LBRACE expr RBRACE expressions_block

    LBRACE  shift, and go to state 34


state 12

   28 expr: NOT . expr

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 35
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 13

   27 expr: MINUS . expr

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 36
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 14

   41 expr: LBRACE . expr RBRACE

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 37
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 15

   44 seq: LBRACE_PER . expressions_comma RBRACE_PER

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 38
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    expressions_comma  go to state 39
    var                go to state 31


state 16

   42 conz: LCURLY_PER . assignment_list RCURLY_PER

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 40
    conz               go to state 27
    seq                go to state 28
    assignment_list    go to state 41
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 17

   51 expressions_block: LCURLYBRACE . RCURLYBRACE
   52                  | LCURLYBRACE . expressions_semicolon RCURLYBRACE
   53                  | LCURLYBRACE . expressions_semicolon SEMICOLON RCURLYBRACE

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    RCURLYBRACE          shift, and go to state 42
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun                  go to state 21
    while                  go to state 22
    if                     go to state 23
    ifx                    go to state 24
    ife                    go to state 25
    expr                   go to state 43
    conz                   go to state 27
    seq                    go to state 28
    get_attr               go to state 29
    expressions_block      go to state 30
    expressions_semicolon  go to state 44
    var                    go to state 31


state 18

    4 defun: DEFUN . QNAME LBRACE var_list RBRACE expressions_block

    QNAME  shift, and go to state 45


state 19

    8 ifx: IF . LBRACE expr RBRACE THEN expr
    9 ife: IF . LBRACE expr RBRACE THEN expr ELSE expr

    LBRACE  shift, and go to state 46


state 20

    2 program: program stmt . EOL

    EOL  shift, and go to state 47


state 21

   16 expr: defun .

    $default  reduce using rule 16 (expr)


state 22

   15 expr: while .

    $default  reduce using rule 15 (expr)


state 23

   17 expr: if .

    $default  reduce using rule 17 (expr)


state 24

    6 if: ifx .

    $default  reduce using rule 6 (if)


state 25

    7 if: ife .

    $default  reduce using rule 7 (if)


state 26

    3 stmt: expr . SEMICOLON
   29 expr: expr . PLUS expr
   30     | expr . MINUS expr
   31     | expr . DIVISION expr
   32     | expr . MULT expr
   33     | expr . EQ expr
   34     | expr . NEQ expr
   35     | expr . GT expr
   36     | expr . GTE expr
   37     | expr . LT expr
   38     | expr . LTE expr
   39     | expr . AND expr
   40     | expr . OR expr
   48 get_attr: expr . LSQUAREBRACE expressions_square_braces RSQUAREBRACE

    EQ            shift, and go to state 48
    NEQ           shift, and go to state 49
    GT            shift, and go to state 50
    GTE           shift, and go to state 51
    LT            shift, and go to state 52
    LTE           shift, and go to state 53
    AND           shift, and go to state 54
    OR            shift, and go to state 55
    MINUS         shift, and go to state 56
    PLUS          shift, and go to state 57
    DIVISION      shift, and go to state 58
    MULT          shift, and go to state 59
    SEMICOLON     shift, and go to state 60
    LSQUAREBRACE  shift, and go to state 61


state 27

   13 expr: conz .

    $default  reduce using rule 13 (expr)


state 28

   14 expr: seq .

    $default  reduce using rule 14 (expr)


state 29

   11 expr: get_attr .
   12     | get_attr . EQUAL expr

    EQUAL  shift, and go to state 62

    EQUAL     [reduce using rule 11 (expr)]
    $default  reduce using rule 11 (expr)


state 30

   18 expr: expressions_block .

    $default  reduce using rule 18 (expr)


state 31

   25 expr: var .
   26     | var . EQUAL expr

    EQUAL  shift, and go to state 63

    EQUAL     [reduce using rule 25 (expr)]
    $default  reduce using rule 25 (expr)


state 32

   10 expr: QNAME LBRACE . expr_list RBRACE

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    $default  reduce using rule 57 (expr_list)

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 38
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    expr_list          go to state 64
    expressions_comma  go to state 65
    var                go to state 31


state 33

   43 conz: ATTRIBUTON_VARIABLE EQUAL . LCURLY_PER assignment_list RCURLY_PER
   45 seq: ATTRIBUTON_VARIABLE EQUAL . LBRACE_PER expressions_comma RBRACE_PER

    LBRACE_PER  shift, and go to state 66
    LCURLY_PER  shift, and go to state 67


state 34

    5 while: WHILE LBRACE . expr RBRACE expressions_block

    INTEGER              shift, and go to state 3
    DOUBLE               shift, and go to state 4
    ASL_STRING           shift, and go to state 5
    QNAME                shift, and go to state 6
    VARIABLE             shift, and go to state 7
    ATTRIBUTON_VARIABLE  shift, and go to state 8
    BOOLEAN              shift, and go to state 9
    UNDEF                shift, and go to state 10
    WHILE                shift, and go to state 11
    NOT                  shift, and go to state 12
    MINUS                shift, and go to state 13
    LBRACE               shift, and go to state 14
    LBRACE_PER           shift, and go to state 15
    LCURLY_PER           shift, and go to state 16
    LCURLYBRACE          shift, and go to state 17
    DEFUN                shift, and go to state 18
    IF                   shift, and go to state 19

    defun              go to state 21
    while              go to state 22
    if                 go to state 23
    ifx                go to state 24
    ife                go to state 25
    expr               go to state 68
    conz               go to state 27
    seq                go to state 28
    get_attr           go to state 29
    expressions_block  go to state 30
    var                go to state 31


state 35

   28 expr: NOT expr .
   29     | expr . PLUS expr
   30     | expr . MINUS expr
   31     | expr . DIVISION expr
   32     | expr . MULT expr
   33     | expr . EQ expr
   34     | expr . NEQ expr
   35     | expr . GT expr
   36     | expr . GTE expr
   37     | expr . LT expr
   38     | expr . LTE expr
   39     | expr . AND expr
   40     | expr . OR expr
   48 get_attr: expr . LSQUAREBRACE expressions_square_braces RSQUAREBRACE

    GT            shift, and go to state 50
    GTE           shift, and go to state 51
    LT            shift, and go to state 52
    LTE           shift, and go to state 53
    AND           shift, and go to state 54
    OR            shift, and go to state 55
    MINUS         shift, and go to state 56
    PLUS          shift, and go to state 57
    DIVISION      shift, and go to state 58
    MULT          shift, and go to state 59
    LSQUAREBRACE  shift, and go to state 61

    $default  reduce using rule 28 (expr)


state 36

   27 expr: MINUS expr .
   29     | expr . PLUS expr
   30     | expr . MINUS expr
   31     | expr . DIVISION expr
   32     | expr . MULT expr
   33     | expr . EQ expr
   34     | expr . NEQ expr
   35     | expr . GT expr
   36     | expr . GTE expr
   37     | expr . LT expr
   38     | expr . LTE expr
   39     | expr . AND expr
   40     | expr . OR expr
   48 get_attr: expr . LSQUAREBRACE expressions_square_braces RSQUAREBRACE

    LSQUAREBRACE  shift, and go to state 61

    $default  reduce using rule 27 (expr)


state 37

   29 expr: expr . PLUS expr
   30     | expr . MINUS expr
   31     | expr . DIVISION expr
   32     | expr . MULT expr
   33     | expr . EQ expr
   34     | expr . NEQ expr
   35     | expr . GT expr
   36     | expr . GTE expr
   37     | expr . LT expr
   38     | expr . LTE expr
   39     | expr . AND expr
   40     | expr . OR expr
   41     | LBRACE expr . RBRACE
   48 get_attr: expr . LSQUAREBRACE expressions_square_braces RSQUAREBRACE

    EQ            shift, and go to state 48
    NEQ           shift, and go to state 49
    GT            shift, and go to state 50
    GTE           shift, and go to state 51
    LT            shift, and go to state 52
    LTE           shift, and go to state 53
    AND           shift, and go to state 54
    OR            shift, and go to state 55
    MINUS         shift, and go to state 56
    PLUS          shift, and go to state 57
    DIVISION      shift, and go to state 58
    MULT          shift, and go to state 59
    RBRACE        shift, and go to state 69
    LSQUAREBRACE  shift, and go to state 61


state 38

   29 expr: expr . PLUS expr
   30     | expr . MINUS expr
   31     | expr . DIVISION expr
   32     | expr . MULT expr
   33     | expr . EQ expr
   34     | expr . NEQ expr
   35     | expr . GT expr
   36     | expr . GTE expr
   37     | expr . LT expr
   38     | expr . LTE expr
   39     | expr . AND expr
   40     | expr . OR expr
   48 get_attr: expr . LSQUAREBRACE expressions_square_braces RSQUAREBRACE
   58 expressions_comma: expr .
